# wad

./: Cargo.toml  README.md
doc/: WATSON_FORMAT.md
doc/adr/: 0001-record-architecture-decisions.md  0002-choice-of-table-rendering-library.md  0003-command-architecture-design.md  0004-interactive-selection-library-choice.md  0005-error-handling-strategy.md  0006-watson-cli-execution-strategy.md  0007-watson-availability-requirement.md  0008-choice-of-ansi-color-library-for-cli-output.md  0009-watson-cli-api-design.md  0010-how-to-handle-active-frames-in-duration-calculations.md  0011-duration-formatting-trait-strategy.md  0012-command-default-options-strategy.md  0013-formatting-traits-centralization-strategy.md  0014-configuration-system-architecture.md  0015-test-framework-choice-for-data-driven-tests.md  0016-user-data-storage-architecture.md  0017-ulid-adoption-for-user-data-record-identification.md
src/: main.rs
src/commands/: absence.rs  config.rs  discovery.rs  mod.rs  worktime.rs
src/commands/worktime/: mod.rs  today.rs  weekly.rs
src/config/: mod.rs
src/utils/: date.rs  editor.rs  formatting.rs  mod.rs  selection.rs  spinner.rs
src/wad_data/: absence.rs  json_store.rs  mod.rs
src/watson/: client.rs  error.rs  frame.rs  mod.rs  query.rs
