[package]
name = "wad"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
enum_dispatch = "0.3.13"
inquire = "0.7.5"
owo-colors = "4.2.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
spinners = "4.1.1"
tabled = { version = "0.20.0", features = ["ansi"] }
thiserror = "2.0.12"
which = "8.0.0"
